--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/push-notification-ios": "^1.12.0",
     "@react-native-firebase/app": "^23.7.0",
@@ -36,7 +37,8 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-webview": "^13.16.0"
+    "react-native-webview": "^13.16.0",
+    "react-qr-code": "^2.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
