--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.5.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/push-notification-ios": "^1.12.0",
     "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/auth": "^23.7.0",
     "@react-native-firebase/messaging": "^23.7.0",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-native-vector-icons/material-icons": "^12.4.0",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/drawer": "^6.6.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.13.2",
+    "jsonwebtoken": "^9.0.3",
     "react": "19.2.0",
     "react-native": "0.83.0",
     "react-native-deep-linking": "^2.2.0",
