--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "^13.16.0",
-    "react-qr-code": "^2.0.18"
+    "react-qr-code": "^2.0.18",
+    "react-native-flash-message": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
